--- a/assets/css/sign-style.css
+++ b/assets/css/sign-style.css
@@ -18,7 +18,7 @@
 .input-item {
     display: flex;
     flex-direction: column;
-    min-width: 300px;
+    min-width: 150px;
 }
 
 .sign .input {
@@ -39,6 +39,7 @@ input {
     height: 40px;
     border-radius: 4px;
     border-width: 0;
+    margin-bottom: 15px;
     padding: 20px;
     font-size: 0.8em;
     letter-spacing: 0.1em;
@@ -67,12 +68,14 @@ label {
 
 .new-account {
     text-align: right;
+    letter-spacing: 2px;
 }
 
 form .flex {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    place-items: center;
 }
 
 .sign-footer {
@@ -87,6 +90,19 @@ form .flex {
     place-items: center;
 }
 
+.btn-sign {
+    padding: 12px 45px;
+    font-size: var(--fs-button);
+    min-width: 120px;
+    background-color: white;
+    border-radius: 7px;
+    border-width: 0;
+    color: var(--clr-header);
+    font-weight: 900;
+    transition: var(--transition);
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
+}
+
 .form-body {
     background: linear-gradient(to top left, hsl(223, 47%, 23%, 0.4) 0%, hsl(224, 23%, 55%, 0.4) 100%);
     margin: 50px 0;
@@ -94,7 +110,7 @@ form .flex {
     padding: 90px 30px;
     color: white;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
-    min-width: 40%;
+    min-width: 25%;
 }
 
 @media(max-width:600px) {
